--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://abhisheksharma:<password>@cluster0.zwweehq.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=your_access_token_secret_here
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
+REFRESH_TOKEN_EXPIRY=10d
